force-app/main/default/objects/Supplier_Engagement__c/Supplier_Engagement__c.object-meta.xml
<CustomObject>
    <label>Supplier Engagement</label>
    <nameField>
        <label>Supplier Engagement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Supplier Engagements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>