force-app/main/default/objects/Supplier_Engagement__c/fields/CDP_Number__c.field-meta.xml
<CustomField>
    <fullName>CDP_Number__c</fullName>
    <label>CDP Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>