force-app/main/default/objects/Supplier_Engagement__c/fields/CDP_Response__c.field-meta.xml
<CustomField>
    <fullName>CDP_Response__c</fullName>
    <label>CDP Response</label>
    <type>Url</type>
</CustomField>