force-app/main/default/objects/Supplier_Engagement__c/fields/Change_in_GHG_Intensity__c.field-meta.xml
<CustomField>
    <fullName>Change_in_GHG_Intensity__c</fullName>
    <formula>(GHG_Intensity__c - Prior_Year_Engagement__r.GHG_Intensity__c )/GHG_Intensity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Change in GHG Intensity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>