force-app/main/default/objects/Supplier_Engagement__c/fields/Change_in_Total_GHG__c.field-meta.xml
<CustomField>
    <fullName>Change_in_Total_GHG__c</fullName>
    <formula>(Total_Scope_1_2_Location_GHG__c -  Prior_Year_Total_Scope_1_2_GHG__c) / Total_Scope_1_2_Location_GHG__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Change in Total GHG</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>