force-app/main/default/objects/Supplier_Engagement__c/fields/GHG_Intensity__c.field-meta.xml
<CustomField>
    <fullName>GHG_Intensity__c</fullName>
    <formula>Total_Scope_1_2_Location_GHG__c / ( Total_Expenditure__c / 1000000)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>(Scope 1 + 2L) / $m</inlineHelpText>
    <label>GHG Intensity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>