force-app/main/default/objects/Supplier_Engagement__c/fields/Main_Contact__c.field-meta.xml
<CustomField>
    <fullName>Main_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Main Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Supplier Engagements</relationshipLabel>
    <relationshipName>Supplier_Engagements</relationshipName>
    <type>Lookup</type>
</CustomField>