force-app/main/default/objects/Supplier_Engagement__c/fields/Prior_Year_Engagement__c.field-meta.xml
<CustomField>
    <fullName>Prior_Year_Engagement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prior Year Engagement</label>
    <referenceTo>Supplier_Engagement__c</referenceTo>
    <relationshipLabel>Supplier Engagements</relationshipLabel>
    <relationshipName>Supplier_Engagements</relationshipName>
    <type>Lookup</type>
</CustomField>