force-app/main/default/objects/Supplier_Engagement__c/fields/Prior_Year_Expenditure__c.field-meta.xml
<CustomField>
    <fullName>Prior_Year_Expenditure__c</fullName>
    <formula>Prior_Year_Engagement__r.Total_Expenditure__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prior Year Expenditure</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>