force-app/main/default/objects/Supplier_Engagement__c/fields/Prior_Year_Total_Scope_1_2_GHG__c.field-meta.xml
<CustomField>
    <fullName>Prior_Year_Total_Scope_1_2_GHG__c</fullName>
    <formula>Prior_Year_Engagement__r.Total_Scope_1_2_Location_GHG__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prior Year Total Scope 1 &amp; 2 GHG</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>