force-app/main/default/objects/Supplier_Engagement__c/fields/Science_Based_Target_Status__c.field-meta.xml
<CustomField>
    <fullName>Science_Based_Target_Status__c</fullName>
    <label>Science Based Target Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Set</fullName>
            </value>
            <value>
                <fullName>Not Set</fullName>
            </value>
            <value>
                <fullName>Self-Declared</fullName>
            </value>
            <value>
                <fullName>Committed</fullName>
            </value>
            <value>
                <fullName>N/A See Parent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>