force-app/main/default/objects/Supplier_Engagement__c/fields/Scope_1_GHG__c.field-meta.xml
<CustomField>
    <fullName>Scope_1_GHG__c</fullName>
    <label>Scope 1 GHG</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>