force-app/main/default/objects/Supplier_Engagement__c/fields/Scope_2_Location_Based_GHG__c.field-meta.xml
<CustomField>
    <fullName>Scope_2_Location_Based_GHG__c</fullName>
    <label>Scope 2 Location-Based GHG</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>