force-app/main/default/objects/Supplier_Engagement__c/fields/Structured_Climate_Targets__c.field-meta.xml
<CustomField>
    <fullName>Structured_Climate_Targets__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Structured Climate Targets</label>
    <type>Checkbox</type>
</CustomField>