force-app/main/default/objects/Supplier_Engagement__c/fields/Supplier_Account__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supplier Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Supplier Engagements</relationshipLabel>
    <relationshipName>Supplier_Engagements</relationshipName>
    <type>Lookup</type>
</CustomField>