force-app/main/default/objects/Supplier_Engagement__c/fields/Supplier_Class__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Class__c</fullName>
    <label>Supplier Class</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A - Top 10</fullName>
            </value>
            <value>
                <fullName>B - Top 11-25</fullName>
            </value>
            <value>
                <fullName>C - Top 26-50</fullName>
            </value>
            <value>
                <fullName>D - Remaining</fullName>
                <default>true</default>
                <label>D - Remaining</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>