force-app/main/default/objects/Supplier_Engagement__c/fields/Supplier_Maturity__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Maturity__c</fullName>
    <label>Supplier Maturity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Starting</fullName>
                <default>true</default>
                <label>Starting</label>
            </value>
            <value>
                <fullName>Scope 1 &amp; 2</fullName>
            </value>
            <value>
                <fullName>All Scopes</fullName>
            </value>
            <value>
                <fullName>Have Reduction Target</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>