force-app/main/default/objects/Supplier_Engagement__c/fields/Total_Energy_Consumped_MWH__c.field-meta.xml
<CustomField>
    <fullName>Total_Energy_Consumped_MWH__c</fullName>
    <label>Total Energy Consumped (MWH)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>