force-app/main/default/objects/Supplier_Engagement__c/fields/Total_Expenditure__c.field-meta.xml
<CustomField>
    <fullName>Total_Expenditure__c</fullName>
    <label>Total Expenditure</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>