force-app/main/default/objects/Supplier_Engagement__c/fields/Total_Renewable_Energy_Consumed_MWH__c.field-meta.xml
<CustomField>
    <fullName>Total_Renewable_Energy_Consumed_MWH__c</fullName>
    <label>Total Renewable Energy Consumed (MWH)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>