force-app/main/default/objects/Supplier_Engagement__c/fields/Total_Scope_1_2_Location_GHG__c.field-meta.xml
<CustomField>
    <fullName>Total_Scope_1_2_Location_GHG__c</fullName>
    <formula>Scope_1_GHG__c + Scope_2_Location_Based_GHG__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Scope 1 &amp; 2 (Location) GHG</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>