force-app/main/default/objects/Supplier_Engagement__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Stage__c</columns>
    <columns>Supplier_Account__c</columns>
    <columns>Main_Contact__c</columns>
    <columns>Supplier_Class__c</columns>
    <columns>GHG_Intensity__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>